--- a/archive.html
+++ b/archive.html
@@ -350,6 +350,154 @@ overflow-x:hidden;
 font-family: Verdana;">
 
 <br>
+<center><img src="https://i.imgur.com/4jxJa8E.png"/></center>
+<br><br>
+<font size = 1><font color="#CBBBB1">
+<center>april . 19 . 2018</center>
+</font></font></font>
+<font size = 1><font color="#B1A69E">
+<br>
+hiiii fluffies <img src="https://i.imgur.com/FImDn9i.gif"/><br>
+aaaa //// i'm so thankful for the cute messages i've received lately !!<br>
+you all are so kind to me, i don't deserve it <img src="https://i.imgur.com/OT3hgIG.gif"/><br>
+also, i love it when you send me suggestions. i like to post things you want to see !<br>
+<br>
+um, so, do you remember that i was training to be ambidextrous ?<br>
+i think i can consider that i already got there !!<br>
+i really can't believe how fast that was, i thought it would take a long time <img src="https://i.imgur.com/2fh66l4.gif"/><br>
+i am training every day using my left hand to do day-to-day tasks, and to write.<br>
+i'd say i can do things 80% the same way with my left hand now !<br>
+and i can write with the same handwriting, but it's a bit slower ( i never can write too fast anyway )<br>
+well, i am very proud of the progress ♡ !!<br>
+<br>
+today the post will be a little more personal, since you have been asking for some little things ///<br>
+these days i was writing down my routine, as usual. i usually write down daily task lists, but i always had some items that i repeated every day.<br>
+for ease, i wrote down these items in a txt, which i kept for a while. it was not very cute, so i thought i should write it somewhere else ...<br>
+i was in the mood to do some pretty cute html page, so i did one with some things from my routine !!<br>
+it was quite spontaneous, i was not even going to show it to anyone at first.<br>
+but as you asked for some more personal things like that, and it was so cute, i decided to post !<br>
+and with a super cute url ( comfy.softcoffee.ro ), of course <img src="https://i.imgur.com/2DYo6uh.gif"/><br>
+i will leave here a backup file, as always :<br>
+<br><br>
+
+<center><img width="350px" height="auto" src="https://i.imgur.com/Re0yY7n.png"/></center>
+<br><br>
+<center><a href="https://mega.nz/#!d4xglbjI!bbil11FF0OUU2-eEnpd93s-HvOWlWc5svWAbJrZ7cGg" id="linkbjinho" target="_blank">rotininha .rar</a></center>
+</font></font></font>
+<br>
+<center>
+<body>
+<style>
+yay { cursor: pointer; }
+</style>
+<div style="font-family: Verdana; font-size: 8px;">
+<font family = "Tahoma"><font color="#997C7C">
+<img width="20px" height="auto" src="https://i.imgur.com/omE4Ax3.gif"/>&nbsp;&nbsp; { &nbsp;1264&nbsp; } &nbsp;
+</font></font>
+</div>
+</body>
+<body>
+<div style="font-family: Verdana; font-size: 8px;">
+<font family = "Tahoma"><font color="#997C7C">
+<img width="20px" height="auto" src="https://i.imgur.com/SJEUa0i.gif"/>&nbsp;&nbsp; { &nbsp;1&nbsp; } &nbsp;
+</font></font>
+</div>
+</body></center>
+
+<font size = 1><font color="#B1A69E">
+<br><br>
+it's in portuguese because.. well, i'm actually going to use it on a day-to-day basis and like i said, it was written spontaneously.<br>
+i hope you don't mind ; ;<br>
+<br>
+i... also have something very personal here that i was soooooo embarrassed to post, and still am, i kept it for several days, but i have to do it !!<br>
+i'm sorry for the audio quality, and i'm talking in a low voice, so... well, i hope it's not too bad to listen ;///;<br>
+<br><br>
+
+<center><a href="https://files.catbox.moe/1xcwqr.mp3" id="linkbjinho" target="_blank">hi .mp3</a></center>
+</font></font></font>
+<br>
+<center>
+<body>
+<style>
+yay { cursor: pointer; }
+</style>
+<div style="font-family: Verdana; font-size: 8px;">
+<font family = "Tahoma"><font color="#997C7C">
+<img width="20px" height="auto" src="https://i.imgur.com/7zvWsMq.gif"/>&nbsp;&nbsp; { &nbsp;1243&nbsp; } &nbsp;
+</font></font>
+</div>
+</body>
+<body>
+<div style="font-family: Verdana; font-size: 8px;">
+<font family = "Tahoma"><font color="#997C7C">
+<img width="20px" height="auto" src="https://i.imgur.com/5w5TqhO.gif"/>&nbsp;&nbsp; { &nbsp;0&nbsp; } &nbsp;
+</font></font>
+</div>
+</body></center>
+
+<font size = 1><font color="#B1A69E">
+<br><br>
+well.. like i said, i can record reading stories, fairytales .. i like this kind of content and it's a little hard to find, so i'll try hard to do it, if you want, of course ; ;<br>
+( please do not ask me to record more singing cause this is too much for me LOL )<br>
+<br>
+because of the other post where i say that i don't like people to "guess" my personality through tests, astrology, blood type or anything, you asked me to post things about my personality.<br>
+i'm actually quite honored that you really care about me that way, it's very sweet <img src="https://i.imgur.com/WatUq79.gif"/><br>
+i thought about it for a while, i don't really like to talk about myself so deeply, but since this is a more personal post... here it is :<br>
+<br><br>
+<center><img src="https://i.imgur.com/d81T42M.gif"/>　<b>q & a</b>　<img src="https://i.imgur.com/gCof63R.gif"/></center>
+<br><br>
+　　　　　𝓅𝓮𝓇𝓈𝓸𝓃𝒶𝓁𝒾𝓉𝓎 𝓉𝓇𝒶𝒾𝓉𝓈 :<br>
+<br>
+❀　i'm very shy & introverted. so, because of my introversion, i don't feel bad for being shy, it's just part of me ;<br>
+❀　i'm full of love and i do my best to take care of others and myself. i want to bring comfort and safety to everyone !<br>
+❀　i have difficulties in approaching and sometimes i never feel comfortable near some people ;<br>
+❀　when i'm comfortable with people, i talk a lot about random things, sometimes i even talk too much ///<br>
+❀　i usually adapt to different situations and different people "changing moods", sometimes i get into it a lot and i feel confused, but i'm always myself ;<br>
+❀　i'm always evaluating my behavior to improve myself, but sometimes i take it too seriously and get overwhelmed ;<br>
+❀　i love rules ! i love to make rules for myself, to have rules made for me and to follow them. rules often make me happy because they make me a better person ;<br>
+❀　i make lists all the time to be able to have an organized routine and take time to practice all my hobbies. feeling busy with things that i like makes me feel pretty satisfied !<br>
+❀　i think too much about everything and sometimes i feel melancholic ;<br>
+❀　i deeply value the purity. for me purity is directly linked to your true personality, who you really are. i never forget who i am and what i believed and wanted from myself when i was a child and i want more than anything to be proud of myself, the child i will always be.<br>
+<br>
+　　　　　𝓮𝓍𝓉𝓇𝒶 :<br>
+<br>
+❀　my sense of humor is quite childish, so i laugh at really silly things ;<br>
+❀　i cry a lot, sad and happy ;<br>
+❀　my main interest is beautiful things and to make things beautiful ;<br>
+❀　i like everything that warms my heart and i try to fill my life with these things ;<br>
+❀　people say i smell like vanilla. i think i smell like honey ///<br>
+❀　i love animals, especially babies, i love taking care of babies ♡ !!!<br>
+❀　i love nature, she is everything to me, i struggle daily to feel part of her and understand my instincts and role in life. this has made me extremely happy and helps me overcome any personal problems.<br>
+<br>
+<br>
+.. that's it ///<br>
+<br>
+<br>
+xoxo <img src="https://i.imgur.com/rsqXRW2.gif"/><br>
+<br><br>
+</font></font></font>
+<br>
+
+<body>
+<div style="float: right;">
+<div style="font-family: Verdana; font-size: 8px;">
+<font family = "Tahoma"><font color="#997C7C">
+<img width="20px" height="auto" src="https://i.imgur.com/lMakBs6.gif"/>&nbsp;&nbsp; { &nbsp;1236&nbsp; } &nbsp;
+</div>
+<div style="font-family: Verdana; font-size: 8px;">
+<font family = "Tahoma"><font color="#997C7C">
+<img width="20px" height="auto" src="https://i.imgur.com/Ky2Z5py.gif"/>&nbsp;&nbsp;{ &nbsp;0&nbsp; } &nbsp;
+</div>
+</font></font>
+</div>
+</body>
+<br><br><br><br><br><br><br>
+
+<center><img src="https://i.imgur.com/4jxJa8E.png"/></center>
+
+<br><br><br>
+
+<br>
 <center><img src="https://i.imgur.com/rR5ekXW.png"/><img src="https://i.imgur.com/rR5ekXW.png"/><img src="https://i.imgur.com/rR5ekXW.png"/><img src="https://i.imgur.com/rR5ekXW.png"/></center>
 <br><br>
 <font size = 1><font color="#CBBBB1">
