--- a/status.html
+++ b/status.html
@@ -347,7 +347,7 @@ position: relative;
 <center><img src="https://i.imgur.com/Bm18E8o.gif"></center><br>
 <center><font color="#B49797">{ status }</font></center>
 <br>
-<center><font color="#A07777">feeling: </font><font color="#E67474">positive </font><img src="https://i.imgur.com/8aDpBg7.gif"></center>
+<center><font color="#A07777">feeling: </font><font color="#E67474">overwhelmed </font><img src="https://i.imgur.com/orsDZZW.gif"></center>
 <br><br>
 <center><img src="https://i.imgur.com/kN7ZWlR.png"><center><br><br><br><style>
 p { margin: 0; }
@@ -396,6 +396,26 @@ p { margin: 0; }
 
 
 <!-- STAAAAAAAAAAAAAAAAAAAAATUSSSSSSSSSSSSSSSSSSSSSSSSSS -->
+<div style="text-align: left;"><br><br>
+　<img src="https://i.imgur.com/lOSrsvD.gif"> <font color="#624646">06.16.18</font>
+<body>
+<div style="float: right;">
+<style>
+yay { cursor: pointer; }
+</style>
+<font family = "Tahoma"><font color="#997C7C">
+<yay><a id="_s29418521090_"><img width="14px" height="14px" src="https://i.imgur.com/FxGzPfn.gif"/></a></yay>&nbsp;&nbsp; { &nbsp;<span id="_s294185210902_"></span>&nbsp; } &nbsp;</p>
+<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1Q-0uQ9qRoiyZnvAtsq5ubQVl1yglMLfT"></script>
+<font family = "Tahoma"><font color="#997C7C">
+<yay><a id="_s29418521092_"><img width="15px" height="15px" src="https://i.imgur.com/rV3oT1f.gif"/></a></yay>&nbsp;&nbsp;{ &nbsp;<span id="_s294185210923_"></span>&nbsp; } &nbsp;</p>
+<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1jMM7xdzlfnpT0AvuNERBFWF2IlbZvrMp"></script>
+</font></font>
+</div>
+</body>
+
+<br><br>
+　　<font color="#815B5B">i really must stop blaming myself for everything ; ;</font>
+<br><br>
 <div style="text-align: left;"><br><br>
 　<img src="https://i.imgur.com/lOSrsvD.gif"> <font color="#624646">06.07.18</font>
 <body>
@@ -575,26 +595,6 @@ yay { cursor: pointer; }
 
 <br><br>
 　　<font color="#815B5B">go away, anxiety, go away !!!</font>
-<br><br><br>
-<div style="text-align: left;"><br><br>
-　<img src="https://i.imgur.com/lOSrsvD.gif"> <font color="#624646">03.29.18</font>
-<body>
-<div style="float: right;">
-<style>
-yay { cursor: pointer; }
-</style>
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_s29418521090_"><img width="14px" height="14px" src="https://i.imgur.com/FxGzPfn.gif"/></a></yay>&nbsp;&nbsp; { &nbsp;<span id="_s294185210902_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1Q-0uQ9qRoiyZnvAtsq5ubQVl1yglMLfT"></script>
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_s29418521092_"><img width="15px" height="15px" src="https://i.imgur.com/rV3oT1f.gif"/></a></yay>&nbsp;&nbsp;{ &nbsp;<span id="_s294185210923_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1jMM7xdzlfnpT0AvuNERBFWF2IlbZvrMp"></script>
-</font></font>
-</div>
-</body>
-
-<br><br>
-　　<font color="#815B5B">where are my wings and my heart pupils</font>
 <br><br>
 <!-- STAAAAAAAAAAAAAAAAAAAAATUSSSSSSSSSSSSSSSSSSSSSSSSSS -->
 
