--- a/look-book.html
+++ b/look-book.html
@@ -418,8 +418,34 @@ p { margin: 0; }
 <br><br>
 <center>
 
-
 <br><br>
+<font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub> 06.19.18 <sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub></font><br><br>
+<img width="220px" height="auto" src="https://i.imgur.com/raiAd1e.png"/><br>
+<br><br>
+
+
+
+<center>
+<body>
+<style>
+yay { cursor: pointer; }
+</style>
+<div style="font-family: Verdana; font-size: 8px;">
+<font family = "Tahoma"><font color="#997C7C">
+<yay><a id="_li2941852109055_"><sub><sub><img width="16px" height="auto" src="https://i.imgur.com/ecgki0o.gif"/></sub></sub></a></yay>&nbsp;&nbsp; { &nbsp;<span id="_li29418521090255_"></span>&nbsp; } &nbsp;</p>
+<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1Wx5dDc9y864OCNfogsD8SL_-Tf-0YqN1"></script>
+</div>
+<div style="font-family: Verdana; font-size: 8px;">
+<font family = "Tahoma"><font color="#997C7C">
+<yay><a id="_li2941852109255_"><sub><sub><img width="16px" height="auto" src="https://i.imgur.com/tymmGmT.gif"/></sub></sub></a></yay>&nbsp;&nbsp;{ &nbsp;<span id="_li29418521092355_"></span>&nbsp; } &nbsp;</p>
+<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1m7L79JVyEQAkYOrqa104EKrQr_hV9lSs"></script>
+</div>
+</font></font>
+</body>
+</center>
+
+
+<br><br><br><br><br>
 <font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub> 06.07.18 <sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub></font><br><br>
 <img width="220px" height="auto" src="https://i.imgur.com/IWRM6XL.png"/><br>
 <br><br>
@@ -654,33 +680,6 @@ yay { cursor: pointer; }
 <font family = "Tahoma"><font color="#997C7C">
 <yay><a id="_li2941852109266_"><sub><sub><img width="16px" height="auto" src="https://i.imgur.com/tymmGmT.gif"/></sub></sub></a></yay>&nbsp;&nbsp;{ &nbsp;<span id="_li29418521092366_"></span>&nbsp; } &nbsp;</p>
 <script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1L9dIaizPvvYq7gJ51wHUo2hIY-ND5zoB"></script>
-</div>
-</font></font>
-</body>
-</center>
-
-
-<br><br><br><br><br>
-<font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub> 12.19.17 <sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub></font><br><br>
-<img width="220px" height="auto" src="https://i.imgur.com/kSge0vK.png"/><br>
-<br><br>
-
-
-
-<center>
-<body>
-<style>
-yay { cursor: pointer; }
-</style>
-<div style="font-family: Verdana; font-size: 8px;">
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_li2941852109055_"><sub><sub><img width="16px" height="auto" src="https://i.imgur.com/ecgki0o.gif"/></sub></sub></a></yay>&nbsp;&nbsp; { &nbsp;<span id="_li29418521090255_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1Wx5dDc9y864OCNfogsD8SL_-Tf-0YqN1"></script>
-</div>
-<div style="font-family: Verdana; font-size: 8px;">
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_li2941852109255_"><sub><sub><img width="16px" height="auto" src="https://i.imgur.com/tymmGmT.gif"/></sub></sub></a></yay>&nbsp;&nbsp;{ &nbsp;<span id="_li29418521092355_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1m7L79JVyEQAkYOrqa104EKrQr_hV9lSs"></script>
 </div>
 </font></font>
 </body>
