--- a/links.html
+++ b/links.html
@@ -346,7 +346,9 @@ position: relative;
 <div style="position:relative; float:right;">
 <sub><img src="https://i.imgur.com/3LZD5fp.gif"></sub><font color="#c1a98b">
  html stuff :</font><br><br>
-<div style="width: 100px; height: 50px; overflow-x:hidden;">
+<div style="width: 105px; height: 50px; overflow-x:hidden;">
+<a id="ooo" title="aesthetic journal" href="https://cute.angelcrafts.ml" target="_blank" >cute.angelcrafts.ml</a>
+<br>
 <a id="ooo" title="my routine" href="https://comfy.softcoffee.ro" target="_blank" >comfy.softcoffee.ro</a>
 <br>
 <a id="ooo" title="unicode converter" href="https://safe.babyhugs.cl" target="_blank" >safe.babyhugs.cl</a>
