--- a/archive.html
+++ b/archive.html
@@ -338,7 +338,8 @@ position: relative;
 <div id="stuff">
 
 <br><br>
-<center><font family = "Verdana"><font color="#E67474"><font size="1"><a href="https://middlepot.com/blog" id="linkbjinho">← back</a></font></font></font></center>
+　　<font family = "Verdana"><font color="#E67474"><font size="1"><a href="https://middlepot.com/blog" id="linkbjinho">← back</a></font></font></font>
+<center><font family = "Verdana"><font color="#E67474"><font size="1"><a href="https://photos.app.goo.gl/jGpdBabX36auRp669" id="linkbjinho" target="_blank">screenshot version</a></font></font></font></center>
 <br><br>
 
 <div style="position: absolute;
