--- a/portfolio.html
+++ b/portfolio.html
@@ -380,7 +380,9 @@ position: relative;
 
 <br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> graphic design<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br></font><br><br>
 <img width="200px" height="auto" src="https://i.imgur.com/SNklLdZ.png"><br><br>
-<img width="200px" height="auto" src="https://i.imgur.com/nJXE1Ek.png">
+<img width="200px" height="auto" src="https://i.imgur.com/nJXE1Ek.png"><br><br>
+<img width="200px" height="auto" src="https://i.imgur.com/jfEMOrb.png"><br><br>
+<img width="200px" height="auto" src="https://i.imgur.com/rwF28fo.png">
 <br><br><br><br>
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
 <center>
@@ -408,7 +410,10 @@ position: relative;
 
 <br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> digital drawing<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
 <br>
-<img width="150px" height="auto" src="https://i.imgur.com/rifuItN.png"><br><br><img width="170px" height="auto" src="https://i.imgur.com/lGwSuIP.png">
+<img width="180px" height="auto" src="https://i.imgur.com/cfEO9ex.png"><br><br>
+<img width="150px" height="auto" src="https://i.imgur.com/79yXxW9.png"><br><br>
+<img width="180px" height="auto" src="https://i.imgur.com/rfuPtQy.png"><br><br>
+<img width="170px" height="auto" src="https://i.imgur.com/lGwSuIP.png">
 <br><br><br><br>
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
 <center>
@@ -417,6 +422,7 @@ position: relative;
 <br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> outfit ideas<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
 <br>
 <img width="170px" height="auto" src="https://i.imgur.com/ZnFkF3q.png"><br><br><img width="170px" height="auto" src="https://i.imgur.com/AOFhc1d.png"><br><br><img width="170px" height="auto" src="https://i.imgur.com/kSge0vK.png">
+<br><br><img width="170px" height="auto" src="https://i.imgur.com/gV1kkrp.png"><br><br><img width="170px" height="auto" src="https://i.imgur.com/o8JOLOa.png">
 <br><br><br><br>
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
 <center>
@@ -447,6 +453,8 @@ position: relative;
 <br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> embroidery<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
 <br>
 <img width="200px" height="auto" src="https://i.imgur.com/vCQFGy0.png">
+<br><br>
+　　<img width="170px" height="auto" src="https://i.imgur.com/DuXGkuR.png">
 <br><br><br><br>
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
 <center>
