--- a/status.html
+++ b/status.html
@@ -347,7 +347,8 @@ position: relative;
 <center><img src="https://i.imgur.com/Bm18E8o.gif"></center><br>
 <center><font color="#B49797">{ status }</font></center>
 <br>
-<center><font color="#A07777">feeling: </font><font color="#E67474">overwhelmed </font><img src="https://i.imgur.com/orsDZZW.gif"></center>
+<center><font color="#A07777">feeling: </font><font color="#E67474">assertive </font><img src="https://i.imgur.com/sLyAV25.gif"></center>
+
 <br><br>
 <center><img src="https://i.imgur.com/kN7ZWlR.png"><center><br><br><br><style>
 p { margin: 0; }
@@ -396,6 +397,26 @@ p { margin: 0; }
 
 
 <!-- STAAAAAAAAAAAAAAAAAAAAATUSSSSSSSSSSSSSSSSSSSSSSSSSS -->
+<div style="text-align: left;"><br><br>
+　<img src="https://i.imgur.com/lOSrsvD.gif"> <font color="#624646">06.26.18</font>
+<body>
+<div style="float: right;">
+<style>
+yay { cursor: pointer; }
+</style>
+<font family = "Tahoma"><font color="#997C7C">
+<yay><a id="_s2941852109022_"><img width="14px" height="14px" src="https://i.imgur.com/FxGzPfn.gif"/></a></yay>&nbsp;&nbsp; { &nbsp;<span id="_s29418521090222_"></span>&nbsp; } &nbsp;</p>
+<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1fl7o2dzfjoRJJVmAWhVo-oQAdEYogM_z"></script>
+<font family = "Tahoma"><font color="#997C7C">
+<yay><a id="_s2941852109222_"><img width="15px" height="15px" src="https://i.imgur.com/rV3oT1f.gif"/></a></yay>&nbsp;&nbsp;{ &nbsp;<span id="_s29418521092322_"></span>&nbsp; } &nbsp;</p>
+<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1vPUP16_k1ZmxJ-2pBlOVDB5Sg4JZ9i8J"></script>
+</font></font>
+</div>
+</body>
+
+<br><br>
+　　<font color="#815B5B">i've been super motivated lately (  ง*`꒳´*) ง</font>
+<br><br>
 <div style="text-align: left;"><br><br>
 　<img src="https://i.imgur.com/lOSrsvD.gif"> <font color="#624646">06.16.18</font>
 <body>
@@ -575,26 +596,6 @@ yay { cursor: pointer; }
 
 <br><br>
 　　<font color="#815B5B">never ever forget to love ♡ ♡ ♡</font>
-<br><br><br>
-<div style="text-align: left;"><br><br>
-　<img src="https://i.imgur.com/lOSrsvD.gif"> <font color="#624646">04.05.18</font>
-<body>
-<div style="float: right;">
-<style>
-yay { cursor: pointer; }
-</style>
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_s2941852109022_"><img width="14px" height="14px" src="https://i.imgur.com/FxGzPfn.gif"/></a></yay>&nbsp;&nbsp; { &nbsp;<span id="_s29418521090222_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1fl7o2dzfjoRJJVmAWhVo-oQAdEYogM_z"></script>
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_s2941852109222_"><img width="15px" height="15px" src="https://i.imgur.com/rV3oT1f.gif"/></a></yay>&nbsp;&nbsp;{ &nbsp;<span id="_s29418521092322_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1vPUP16_k1ZmxJ-2pBlOVDB5Sg4JZ9i8J"></script>
-</font></font>
-</div>
-</body>
-
-<br><br>
-　　<font color="#815B5B">go away, anxiety, go away !!!</font>
 <br><br>
 <!-- STAAAAAAAAAAAAAAAAAAAAATUSSSSSSSSSSSSSSSSSSSSSSSSSS -->
 
