--- a/languages.html
+++ b/languages.html
@@ -349,15 +349,14 @@ position: relative;
 　　<font color="#D3BFBF">so, portuguese ( português ) is my mother language ( the brazilian portuguese. i'm from<br>　são paulo ) and i muuust say, a very strict mommy, but also very romantic <img src="https://i.imgur.com/Vuc8cRg.gif"></font>
 <br><br><br><font color="#C4B2B2">　　these are languages i'm currently learning and my level of practice :</font>
 <br><br><br>
-<img src="https://i.imgur.com/rXxzqPA.png">　　　　<font color="#BAA9A9">english</font>　　<img src="https://i.imgur.com/AHiuj5M.png">　<font color="#DCBBBB">[ i'm considered fluent, but i'm not very comfortable,<br>　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　still improving ]</font><br><br>
-<img src="https://i.imgur.com/rXxzqPA.png">　　　　<font color="#BAA9A9">japanese ( nihongo, 日本語 )</font>　　<img src="https://i.imgur.com/HmF9TCj.png">　<font color="#DCBBBB">[ i have to practice my vocabulary and<br>　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　kanji, aaaa ]</font><br><br>
-<img src="https://i.imgur.com/rXxzqPA.png">　　　　<font color="#BAA9A9">germany ( deutsch )</font>　　<img src="https://i.imgur.com/CFUjh7H.png">　<font color="#DCBBBB">[ my vocabulary is shit but i'm going fast forward ]</font><br><br>
-<img src="https://i.imgur.com/rXxzqPA.png">　　　　<font color="#BAA9A9">italian ( italiano )</font>　　<img src="https://i.imgur.com/HmF9TCj.png">　<font color="#DCBBBB">[ well i must learn to speak without sound thick to<br>　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　everyone ]</font><br><br>
+<img src="https://i.imgur.com/rXxzqPA.png">　　　　<font color="#BAA9A9">english</font>　　<img src="https://i.imgur.com/AHiuj5M.png">　<font color="#DCBBBB">[ i'm considered fluent, but i'm still improving ]</font><br><br>
+<img src="https://i.imgur.com/rXxzqPA.png">　　　　<font color="#BAA9A9">japanese ( nihongo, 日本語 )</font>　　<img src="https://i.imgur.com/HmF9TCj.png">　<font color="#DCBBBB">[ i have to practice kanji, aaa ]</font><br><br>
+<img src="https://i.imgur.com/rXxzqPA.png">　　　　<font color="#BAA9A9">germany ( deutsch )</font>　　<img src="https://i.imgur.com/CFUjh7H.png">　<font color="#DCBBBB">[ my accent is truly a problem here ]</font><br><br>
+<img src="https://i.imgur.com/rXxzqPA.png">　　　　<font color="#BAA9A9">italian ( italiano )</font>　　<img src="https://i.imgur.com/AHiuj5M.png">　<font color="#DCBBBB">[ i'm going fast forward !!! ]</font><br><br>
 <img src="https://i.imgur.com/rXxzqPA.png">　　　　<font color="#BAA9A9">spanish ( español )</font>　　<img src="https://i.imgur.com/AHiuj5M.png">　<font color="#DCBBBB">[ good but i have a horrible accent and need to<br>　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　practice ]</font><br><br>
 <img src="https://i.imgur.com/rXxzqPA.png">　　　　<font color="#BAA9A9">french ( français )</font>　　<img src="https://i.imgur.com/HmF9TCj.png">　<font color="#DCBBBB">[ i want to have a cute accent, help ]</font><br><br>
-
-<img src="https://i.imgur.com/rXxzqPA.png">　　　　<font color="#BAA9A9">russian ( russkij jazyk, русский язык )</font>　　<img src="https://i.imgur.com/2CfT5Fv.png">　<font color="#DCBBBB">[ i'm anxious to start learning<br>　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　properly, but i'm so busy ugh ]</font><br><br>
-<img src="https://i.imgur.com/rXxzqPA.png">　　　　<font color="#BAA9A9">korean ( hanguk-eo, 한국어 )</font>　　<img src="https://i.imgur.com/2CfT5Fv.png">　<font color="#DCBBBB">[ i am very interested, but things are<br>　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　hard for now and i need tiiiime ]</font><br><br>
+<img src="https://i.imgur.com/rXxzqPA.png">　　　　<font color="#BAA9A9">russian ( russkij jazyk, русский язык )</font>　　<img src="https://i.imgur.com/CFUjh7H.png">　<font color="#DCBBBB">[ the cyrillic alphabet makes me<br>　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　so confused sometimes ]</font><br><br>
+<img src="https://i.imgur.com/rXxzqPA.png">　　　　<font color="#BAA9A9">korean ( hanguk-eo, 한국어 )</font>　　<img src="https://i.imgur.com/CFUjh7H.png">　<font color="#DCBBBB">[ just started, i'm studying hangul ! ]<br></font><br><br>
 <br><center><img src="https://i.imgur.com/fBIjD8H.gif"></center><br><br><br>
 　for some people who are still curious about my origins, as i am brazilian, i decided to tell you what i know.<br>
 　i have a strong european descent, mainly italian.<br>
