--- a/tiny-journal.html
+++ b/tiny-journal.html
@@ -402,7 +402,56 @@ p { margin: 0; }
 <br><br>
 </center>
 
+<div style="text-align:left">
+<center><font color="#B5A3A3">
+<img src="https://i.imgur.com/QLXV4LE.gif"><br><br>
+june . 27 . 2018<br>
+☆ warm cheeks ☆
+</font>
+</center>
+<font color="#C2B1B1">
+<br><br>
 
+　　sometimes life is heavy to deal with<br>
+　　　　　　　　　it's hard, it's painful<br>
+　　my soft heart overflows love and it makes me cry<br>
+　　　　　　　　　i cry until i sleep<br>
+　　when i wake up<br>
+　　with tired eyes and blurred vision<br>
+　　i close the window, because it's already dusk<br>
+　　　　　　　　　the sky is lilac and soft blue<br>
+　　　　　　　　　all things look rosy<br>
+　　　　　　　　　the weather is perfect<br>
+　　　　　　　　　　　　　　i feel a warm,<br>
+　　　　　　　　　　　　　　soft breeze on my face<br>
+　　　　　　　　　　　　　　when my cheeks become warm<br>
+　　　　　　　　　and my heart beats faster<br>
+　　life is worth it.
+<br><br>
+</font>
+
+<div style="float: right; ">
+<body>
+<div style="float: right;">
+<style>
+yay { cursor: pointer; }
+</style>
+<div style="font-family: Verdana; font-size: 8px;">
+<font family = "Tahoma"><font color="#997C7C">
+<yay><a id="_t2941852109022_"><img width="15px" height="15px" src="https://i.imgur.com/qpOSnZ5.gif"/></a></yay>&nbsp;&nbsp; { &nbsp;<span id="_t29418521090222_"></span>&nbsp; } &nbsp;</p>
+<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1yN8djyCwtd-4XK7EcKJ0QPqxhFv1iqtB"></script>
+<div style="font-family: Verdana; font-size: 8px;">
+<font family = "Tahoma"><font color="#997C7C">
+<yay><a id="_t2941852109222_"><img width="15px" height="15px" src="https://i.imgur.com/UhJgJcU.gif"/></a></yay>&nbsp;&nbsp;{ &nbsp;<span id="_t29418521092322_"></span>&nbsp; } &nbsp;</p>
+<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1JqQRifQq_nO3TonotQQGvGCc6L2v-t8l"></script>
+</font></font>
+</div>
+</div>
+</div>
+</body>
+</div>
+
+<br><br><br><br><br><br><br><br>
 <div style="text-align:left">
 <center><font color="#CFA5A5">
 <img src="https://i.imgur.com/1p8cFQf.gif"><br><br>
@@ -595,46 +644,8 @@ yay { cursor: pointer; }
 
 
 
-<br><br><br><br><br><br><br><br>
-<center><font color="#CFA5A5">
-<img src="https://i.imgur.com/1p8cFQf.gif"><br><br>
-august . 16 . 2017<br>
-☆ pink little bug ☆
-</font>
-</center>
-<font color="#D8ACAC">
-<br><br>
 
-　　One night, a little bug, which is not known for what it is or what it was, was swimming, flying, or walking. He was a bit clumsy, as far as we know he was pink.<br>
-　　When he was being clumsy he was walking, swimming, or flying, through a forest without identification and without existence. So he stumbled, fell, or drowned in something undefined, but what we do know is that this "something" was a half-reddish-gray color, half purple and a little green. So what was pink turned into a color that we are not quite sure which, but which are some (perhaps more) colors of the rainbow. Just as he changed his color, he lost some sense and part of his intelligence, which was not that much, anyway. As we know, he had recent memory loss, and he also lost some of his language skills.<br>
-　　Maybe this is not a true story, it's up to you to reflect on it, for us, whatever. It's told and probably proven. But we will leave a moral:<br>
-　　Moral of the story: To every ten people, five is the half.
-<br><br>
-<center>E N D</center>
-</font>
-
-<div style="float: right; ">
-<body>
-<div style="float: right;">
-<style>
-yay { cursor: pointer; }
-</style>
-<div style="font-family: Verdana; font-size: 8px;">
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_t2941852109022_"><img width="15px" height="15px" src="https://i.imgur.com/qpOSnZ5.gif"/></a></yay>&nbsp;&nbsp; { &nbsp;<span id="_t29418521090222_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1yN8djyCwtd-4XK7EcKJ0QPqxhFv1iqtB"></script>
-<div style="font-family: Verdana; font-size: 8px;">
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_t2941852109222_"><img width="15px" height="15px" src="https://i.imgur.com/UhJgJcU.gif"/></a></yay>&nbsp;&nbsp;{ &nbsp;<span id="_t29418521092322_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1JqQRifQq_nO3TonotQQGvGCc6L2v-t8l"></script>
-</font></font>
-</div>
-</div>
-</div>
-</body>
-
-
-<br><br><br><br><br><br><br>
+<br><br><br><br>
 
 
 </div>
