--- a/links.html
+++ b/links.html
@@ -347,11 +347,11 @@ position: relative;
 <sub><img src="https://i.imgur.com/3LZD5fp.gif"></sub><font color="#c1a98b">
  html stuff :</font><br><br>
 <div style="width: 105px; height: 50px; overflow-x:hidden;">
-<a id="ooo" title="aesthetic journal" href="https://cute.angelcrafts.ml" target="_blank" >cute.angelcrafts.ml</a>
+<a id="ooo" title="aesthetic journal" href="https://cute.home.kg" target="_blank" >cute.home.kg</a>
 <br>
-<a id="ooo" title="my routine" href="https://comfy.softcoffee.ro" target="_blank" >comfy.softcoffee.ro</a>
+<a id="ooo" title="my routine" href="https://comfy.now.im" target="_blank" >comfy.now.im</a>
 <br>
-<a id="ooo" title="unicode converter" href="https://safe.babyhugs.cl" target="_blank" >safe.babyhugs.cl</a>
+<a id="ooo" title="unicode converter" href="https://safe.cyberlove.us" target="_blank" >safe.cyberlove.us</a>
 <br>
 <a id="ooo" title="html test" href="https://milk.honey.my" target="_blank" >milk.honey.my</a>
 <br>
