--- a/archive.html
+++ b/archive.html
@@ -377,7 +377,7 @@ for ease, i wrote down these items in a txt, which i kept for a while. it was no
 i was in the mood to do some pretty cute html page, so i did one with some things from my routine !!<br>
 it was quite spontaneous, i was not even going to show it to anyone at first.<br>
 but as you asked for some more personal things like that, and it was so cute, i decided to post !<br>
-and with a super cute url ( comfy.softcoffee.ro ), of course <img src="https://i.imgur.com/2DYo6uh.gif"/><br>
+and with a super cute url ( comfy.now.im ), of course <img src="https://i.imgur.com/2DYo6uh.gif"/><br>
 i will leave here a backup file, as always :<br>
 <br><br>
 
@@ -1446,7 +1446,7 @@ xoxo <img src="https://i.imgur.com/fe1R9WO.gif"/><br>
 hiii fluffies <img src="https://i.imgur.com/QLvt1zB.gif"/><br>
 i now have custom domains and ssl for my tumblrs !!<br>
 i'm so happy about it, i managed to keep everything 100% covered with ssl, and i changed all the links, for the consistency.<br>
-and now i've also put some html files online : the html tester ( milk.honey.my ), the offline ywot ( rosy.latteart.fi ) and also a new page of unicode text converters ( safe.babyhugs.cl ) !<br>
+and now i've also put some html files online : the html tester ( milk.honey.my ), the offline ywot ( rosy.latteart.fi ) and also a new page of unicode text converters ( safe.cyberlove.us ) !<br>
 i like collecting unicodes, and there are some "unicode fonts" that few people know about and i think it's cool to share ! these converters were made by me for easier use.<br>
 i had doubts between using tumblr or github to host those files, and i chose github. unfortunately i can't use ssl for these, at least for now <img src="https://i.imgur.com/bAXd801.gif"/><br>
 the domains are so lovely, right ? <sub><img src="https://i.imgur.com/qSScj23.gif"/></sub><br>
