--- a/archive.html
+++ b/archive.html
@@ -351,6 +351,148 @@ overflow-x:hidden;
 font-family: Verdana;">
 
 <br>
+<center><img src="https://i.imgur.com/GwbPvXi.gif"/></center>
+<br><br>
+<font size = 1><font color="#CBBBB1">
+<center>may . 04 . 2018</center>
+</font></font></font>
+<font size = 1><font color="#B1A69E">
+<br>
+hiiiii fluffies <img src="https://i.imgur.com/QwgXhbN.gif"/><br>
+i would like to thank once again the support you give me, it is really very special for me !!<br>
+the ideas you give me are very useful and i never tire of saying thank you <img src="https://i.imgur.com/3ubYtGu.gif"/><img src="https://i.imgur.com/4xWUuUR.gif"/><br>
+because of my routine post yesterday i received some messages thanking the inspiration for organization and productivity, but i also received some rather sad messages saying that they couldn't be productive or follow schedules like me.<br>
+i would like to clarify that although schedules are important, it is not always possible to follow them.<br>
+sometimes i go to sleep later than i intended, sometimes i wake up with a headache, i don't force myself to go beyond my limits <img src="https://i.imgur.com/TrqO7A4.gif"/><br>
+everyone has different limits, you don't have to do multiple tasks every day, you don't have to wake up at 6:30 am, it's different for every person !<br>
+your routine should be tailored to your lifestyle and your chores and hobbies should be things that you feel good doing, and i didn't include household chores in the routine because they vary according to need, but i have these as well, every day <img src="https://i.imgur.com/LTuY6k2.gif"/><br>
+it's important to be productive but it's also important to stay healthy and happy, never forget <img src="https://i.imgur.com/Qjiy032.gif"/><br>
+<br>
+soooooo, i'm super happy these days because tomorrow, day 5, me and bubu have completed 5 years of dating ♡ !!!!<br>
+we're going to take a little trip together and i'm super extremely excited and i dream about it every day !!<br>
+i love him so so so so so much <img src="https://i.imgur.com/g5pvtoc.gif"/><img src="https://i.imgur.com/ANrPV0v.gif"/><br>
+<br>
+today i'm going to finally show you something that you asked me since the videos on my phone, i'll show you a little bit of my notebook :<br>
+<br><br>
+<center><video width="350" height="auto" controls>
+<source src="https://files.catbox.moe/xpyebx.webm" type="video/webm">
+</video></center>
+<br><br>
+</font></font></font>
+<br>
+<center>
+<body>
+<style>
+yay { cursor: pointer; }
+</style>
+<div style="font-family: Verdana; font-size: 8px;">
+<font family = "Tahoma"><font color="#997C7C">
+<img width="20px" height="auto" src="https://i.imgur.com/UKhQauT.gif"/>&nbsp;&nbsp; { &nbsp;1421&nbsp; } &nbsp;
+</font></font>
+</div>
+</body>
+<body>
+<div style="font-family: Verdana; font-size: 8px;">
+<font family = "Tahoma"><font color="#997C7C">
+<img width="20px" height="auto" src="https://i.imgur.com/EL39DaW.gif"/>&nbsp;&nbsp; { &nbsp;0&nbsp; } &nbsp;
+</font></font>
+</div>
+</body></center>
+
+<font size = 1><font color="#B1A69E">
+<br><br>
+it's also a bit old, but it's perfect so far !<br>
+and yes, that is a kagamine rin shimeji ( my favorite vocaloid btw )<br>
+<br>
+i recorded my voice one more time, this time it's a story, as you asked !!<br>
+it's a story i made, from the crwel friends project.<br>
+record reading was much harder than i expected, and i recorded before bed so i was a bit sleepy.. <img src="https://i.imgur.com/TgED1KJ.gif"/><br>
+sorry for the weird pronunciations ////<br>
+<br><br>
+
+<center><a href="https://files.catbox.moe/x5izzr.mp3" id="linkbjinho" target="_blank">crwel friends .mp3</a></center>
+</font></font></font>
+<br>
+<center>
+<body>
+<style>
+yay { cursor: pointer; }
+</style>
+<div style="font-family: Verdana; font-size: 8px;">
+<font family = "Tahoma"><font color="#997C7C">
+<img width="20px" height="auto" src="https://i.imgur.com/7zvWsMq.gif"/>&nbsp;&nbsp; { &nbsp;1432&nbsp; } &nbsp;
+</font></font>
+</div>
+</body>
+<body>
+<div style="font-family: Verdana; font-size: 8px;">
+<font family = "Tahoma"><font color="#997C7C">
+<img width="20px" height="auto" src="https://i.imgur.com/5w5TqhO.gif"/>&nbsp;&nbsp; { &nbsp;1&nbsp; } &nbsp;
+</font></font>
+</div>
+</body></center>
+
+<font size = 1><font color="#B1A69E">
+<br><br>
+next time i want to record something in portuguese, i think it would be interesting.<br>
+what do you think ?<br>
+<br>
+so /// because of yesterday's very personal post with information about my personality, some people asked me to post some things about my body as well. i thought a lot about it because it's very intimate and i don't like to post so many things like that ...<br>
+but i decided that i'll post, since these are information that anyone who knows me personally would know, there is nothing so secret about it.<br>
+i'll add these in the faq :<br>
+<br>
+✂　my height is 5,5. average, i guess ?<br>
+✂　i weight 117 lbs. i think i'm skinny, but not super skinny, i'm okay.<br>
+✂　i don't want to share measurements here, but i really like my body shape ! according to my measures, i'm hourglass figure.<br>
+✂　my skin is pale, but not super pale. i hate tanning because my skin is really sensitive and turns red only ; ;<br>
+✂　my hair changes color very much according to the lighting, but it also becomes clearer if i go out in the sun. it's dark blond / light brown and sometimes it gets a little bit orange, but it's only noticeable in the sunlight.<br>
+✂　i like to keep a "himecut" in my hair, with short side bangs ( it's cute but also a bit more mature than straight bangs ). i cut my hair myself. i'm lazy so it's common for my bangs to be super long + my hair is quite wavy, so the cut is not so noticeable.<br>
+✂　my eyes are between blue and green ( cyan, turquoise ) + a little bit grayish.<br>
+✂　i don't know my shoe size to be honest, but my feet are 24cm.<br>
+✂　um... i'm a-cup ;////;<br>
+<br>
+... of course i would not leave the post with just that, it would be shameful.<br>
+i have something much more important to post on today's q&a, super very extremely important :<br>
+<br><br>
+<center><img src="https://i.imgur.com/d81T42M.gif"/>　<b>q & a</b>　<img src="https://i.imgur.com/gCof63R.gif"/></center>
+<br><br>
+i would like to talk about these two adjectives that are so confusing to people : pure & innocent.<br>
+these are actually extremely important things, but are treated as something far, almost impossible to achieve. and that's not true, because it's something we can all go back to.<br>
+to explain it better, let's define purity and innocence :<br>
+purity, as i have already commented in other posts, is something that you are when you're being yourself. when you act naturally and follow your heart, when you do not listen to what others think is good for you, but what your heart says is best for you. your heart wants you to have a clear conscience, want you to stay safe and healthy, wants you to be happy. it's not always the easiest path, but it's always the right one, the pure one. purity is literally not be contaminated by external influences. it's hard because we live in society and we need to please others, but it doesn't mean that you need to change who you are ( not even a little bit ) to be a nice person, and be happy.<br>
+innocence is something that people often confuse with ignorance. when you don't know things by choice, you are being ignorant, which is a bad quality. innocence is when you see the world in a beautiful way, when you believe in your dreams, believe things can get better, do not judge others before you know, when even after being bitten by a dog, do not you think all dogs are evil. so, innocence is more linked to positivity, it's a quality of being radiant and full of love, even having gone through difficult things, or not. of course it's easier to be positive when you don't have traumas to deal with, but that's not the point. it is possible, and it is necessary for you to be happy !<br>
+children are pure and innocent because they have not been "contaminated" by society's pressure to be different from who they really are, to give up their dreams, to think the world and people are bad and it's always getting worse. this is not right and it's not true. it's a super toxic thought.<br>
+other ( nonhuman ) animals are like children forever, for at least none of them still live in society like humans. society itself is not a problem, but people just don't have the maturity to deal with it in a healthy way. it's something that people should educate themselves and educate their children so that we can all be happier !!<br>
+never think that you have no hope, that you are dirty or rotten, that your dreams can't come true, that magic doesn't exist. erase it forever from your life !!! learning to evaluating your behavior and the way you see the world is very important to becoming a better and more satisfied person. believe in your dreams, make the little you from the past proud of who you became today ♡ !<br>
+<br>
+i really hope it touched your heart !<br>
+<br>
+<br>
+xoxo <img src="https://i.imgur.com/vqXVTZq.gif"/><br>
+<br><br>
+</font></font></font>
+<br>
+
+<body>
+<div style="float: right;">
+<div style="font-family: Verdana; font-size: 8px;">
+<font family = "Tahoma"><font color="#997C7C">
+<img width="20px" height="auto" src="https://i.imgur.com/lMakBs6.gif"/>&nbsp;&nbsp; { &nbsp;1417&nbsp; } &nbsp;
+</div>
+<div style="font-family: Verdana; font-size: 8px;">
+<font family = "Tahoma"><font color="#997C7C">
+<img width="20px" height="auto" src="https://i.imgur.com/Ky2Z5py.gif"/>&nbsp;&nbsp;{ &nbsp;0&nbsp; } &nbsp;
+</div>
+</font></font>
+</div>
+</body>
+<br><br><br><br><br><br><br>
+
+<center><img src="https://i.imgur.com/GwbPvXi.gif"/></center>
+
+<br><br><br>
+
+<br>
 <center><img src="https://i.imgur.com/4jxJa8E.png"/></center>
 <br><br>
 <font size = 1><font color="#CBBBB1">
